tests/community/submissions/12/MultArrays.output.error
Type error at <stdin> line 9 col 13: operation "*" not defined for Object Object, Number 2
