tests/community/submissions/12/MultArrays.sl
/*
* Test what happens when multiplying an integer and an array.
*/

function main() {
    a = new();
    a[0] = 42;

    println(a * 2);
}
